--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -35,6 +36,7 @@
 }
 .top__text_wide {
   font-weight: 700;
+  transition: all 0.8 ease-in;
 }
 .top__button {
   height: 48px;
@@ -50,6 +52,7 @@
   border: none;
   border-radius: 30px;
   background: #9C0332;
+  transition: all 0.8 ease-in;
 }
 
 .content {
@@ -93,4 +96,19 @@
   font-style: normal;
   font-weight: 600;
   line-height: 32px;
+}
+
+/*Эффекты наведения*/
+.top__text_wide:hover {
+  color: #9C0332;
+}
+
+.top__button:hover {
+  background: #000915;
+  color: #9C0332;
+}
+
+.item:hover {
+  box-shadow: 0 0 5px #ccc;
+  transform: scale(1.05);
 }/*# sourceMappingURL=style.css.map */
