Подключил шрифты, добавил адаптив на мобилку.

--- a/style.css
+++ b/style.css
@@ -75,15 +75,15 @@
   border: none;
   border-radius: 16px;
 }
-.item_1 {
+.item_game1 {
   background-image: url(img/game1.jpg);
   background-repeat: no-repeat;
 }
-.item_2 {
+.item_game2 {
   background-image: url(img/game2.jpg);
   background-repeat: no-repeat;
 }
-.item_3 {
+.item_game3 {
   background-image: url(img/game3.jpg);
   background-repeat: no-repeat;
 }
@@ -111,4 +111,40 @@
 .item:hover {
   box-shadow: 0 0 5px #ccc;
   transform: scale(1.05);
+}
+
+/* Cтили для мобильного */
+@media (max-width: 426px) {
+  .top {
+    padding-left: 16px;
+    padding-right: 16px;
+    height: 735px;
+    background-image: url(img/1pagemobile.jpg);
+    background-size: cover;
+    align-items: center;
+  }
+  .top__heading {
+    width: 343px;
+    text-align: center;
+    font-size: 32px;
+  }
+  .top__text {
+    width: 343px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .content {
+    height: 1221px;
+    padding-left: 16px;
+    padding-right: 16px;
+    display: grid;
+    align-content: center;
+  }
+  .item {
+    width: 343px;
+  }
+  .item__heading {
+    margin-left: 16px;
+  }
 }/*# sourceMappingURL=style.css.map */
