--- a/style.scss
+++ b/style.scss
@@ -71,15 +71,15 @@
     box-sizing: border-box;
     border: none;
     border-radius: 16px;
-    &_1 {
+    &_game1 {
         background-image: url(img/game1.jpg);
         background-repeat: no-repeat;
     }
-    &_2 {
+    &_game2 {
         background-image: url(img/game2.jpg);
         background-repeat: no-repeat;
     }
-    &_3 {
+    &_game3 {
         background-image: url(img/game3.jpg);
         background-repeat: no-repeat;
     }
@@ -107,3 +107,43 @@
     box-shadow: 0 0 5px #ccc;
     transform: scale(1.05);
     }
+
+/* Cтили для мобильного */
+
+@media (max-width: 426px) {
+    
+    .top {
+        padding-left: 16px;
+        padding-right: 16px;
+        height: 735px;
+        background-image: url(img/1pagemobile.jpg);
+        background-size: cover;
+        align-items: center;
+
+        &__heading {
+            width: 343px;
+            text-align: center;
+            font-size: 32px;                                   
+        }
+        &__text {
+            width: 343px;
+            text-align: center;
+            font-size: 14px;
+            line-height: 22px;
+        }      
+    }
+    .content {
+        height: 1221px;
+        padding-left: 16px;
+        padding-right: 16px;
+        display: grid;
+        align-content: center;
+        
+    }
+    .item {
+        width: 343px;
+        &__heading {
+            margin-left: 16px;
+        }
+    }
+}
