--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   gap: 32px;
 }
 .top__heading {
-  width: 788px;
+  max-width: 788px;
   height: 125px;
   color: #FFF;
   font-family: Montserrat;
@@ -25,7 +25,7 @@
   line-height: normal;
 }
 .top__text {
-  width: 481px;
+  max-width: 481px;
   height: 64px;
   color: #FFF;
   font-family: Montserrat;
@@ -75,18 +75,6 @@
   border: none;
   border-radius: 16px;
 }
-.item_game1 {
-  background-image: url(img/game1.jpg);
-  background-repeat: no-repeat;
-}
-.item_game2 {
-  background-image: url(img/game2.jpg);
-  background-repeat: no-repeat;
-}
-.item_game3 {
-  background-image: url(img/game3.jpg);
-  background-repeat: no-repeat;
-}
 .item__heading {
   margin-left: 32px;
   margin-bottom: 32px;
@@ -96,6 +84,21 @@
   font-style: normal;
   font-weight: 600;
   line-height: 32px;
+}
+
+.item:nth-child(1) {
+  background-image: url(img/game1.jpg);
+  background-repeat: no-repeat;
+}
+
+.item:nth-child(2) {
+  background-image: url(img/game2.jpg);
+  background-repeat: no-repeat;
+}
+
+.item:nth-child(3) {
+  background-image: url(img/game3.jpg);
+  background-repeat: no-repeat;
 }
 
 /*Эффекты наведения*/
@@ -113,14 +116,14 @@
   transform: scale(1.05);
 }
 
-/* Cтили для мобильного */
-@media (max-width: 426px) {
+@media (min-width: 375px) and (max-width: 426px) {
   .top {
     padding-left: 16px;
     padding-right: 16px;
     height: 735px;
     background-image: url(img/1pagemobile.jpg);
     background-size: cover;
+    background-position: center;
     align-items: center;
   }
   .top__heading {
@@ -146,5 +149,60 @@
   }
   .item__heading {
     margin-left: 16px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+  .top {
+    padding-left: 56px;
+    padding-right: 56px;
+    height: 735px;
+    background-position: center;
+    align-items: center;
+    gap: 64px;
+  }
+  .top__heading {
+    text-align: center;
+    font-size: 48px;
+  }
+  .top__text {
+    text-align: center;
+    font-size: 20px;
+    line-height: 22px;
+  }
+  .content {
+    padding-top: 127px;
+    padding-bottom: 127px;
+    height: 556px;
+  }
+  .item {
+    width: 343px;
+    height: 300px;
+    display: flex;
+    align-items: flex-end;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 16px;
+  }
+  .item__heading {
+    margin-left: 32px;
+    margin-bottom: 32px;
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 32px;
+  }
+  .item:nth-child(1) {
+    background-image: url(img/game1.jpg);
+    background-repeat: no-repeat;
+  }
+  .item:nth-child(2) {
+    background-image: url(img/game2.jpg);
+    background-repeat: no-repeat;
+  }
+  .item:nth-child(3) {
+    background-image: url(img/game3.jpg);
+    background-repeat: no-repeat;
   }
 }/*# sourceMappingURL=style.css.map */
