--- a/_mobile.scss
+++ b/_mobile.scss
@@ -35,4 +35,50 @@
             margin-left: 16px;
         }
     }
+    .afterContent {
+        padding-top: 51px;
+        padding-left: 15px;
+        padding-right: 15px;
+        display: flex;
+        flex-direction: column;
+        gap: 64px;
+
+    }
+    .active {
+        width: 343px;
+        padding-top: 51px;
+        align-items: center;
+        &__heading {
+            width: 243px;
+            color: #FFF;
+            text-align: center;
+            font-family: Montserrat;
+            font-size: 32px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+        }
+        &__text {
+            width: 343px;
+            color: #FFF;
+            text-align: center;
+            font-family: Montserrat;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 300;
+            line-height: 22px;
+        }
+    }
+    .vector {
+        width: 344px;
+        padding-top: 0px;
+        padding-bottom: 85px;
+    }
+    .bigImage {
+        display: none;
+    }
+    .smallImage {
+        display: flex;
+    }
+
 }
