--- a/_mobile.scss
+++ b/_mobile.scss
@@ -36,20 +36,19 @@
         }
     }
     .afterContent {
+        padding-left: 16px;
+        padding-right: 16px;
         padding-top: 51px;
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-bottom: 85px;
         display: flex;
         flex-direction: column;
         gap: 64px;
-
+        align-items: center;
+        background: #000915;
     }
     .active {
-        width: 343px;
-        padding-top: 51px;
         align-items: center;
         &__heading {
-            width: 243px;
             color: #FFF;
             text-align: center;
             font-family: Montserrat;
@@ -71,14 +70,11 @@
     }
     .vector {
         width: 344px;
-        padding-top: 0px;
-        padding-bottom: 85px;
     }
     .bigImage {
         display: none;
     }
     .smallImage {
-        display: flex;
+        display: block;
     }
-
 }
