--- a/style.scss
+++ b/style.scss
@@ -54,6 +54,8 @@
 }
 .content {
     height: 556px;
+    padding-left: 120px;
+    padding-right: 120px;
     background-color: #000915;
     display: flex;
     flex-direction: row;
@@ -111,16 +113,18 @@
 .afterContent {
     padding-left: 120px;
     padding-right: 116px;
+    padding-top: 233.5px;
+    padding-bottom: 233.5px;
     display: flex;
     flex-direction: row;
     gap: 135px;
     background: #000915;
 }
-.active{
-    padding-top: 282px;
+.active {
     display: flex;
     flex-direction: column;
     gap: 32px;
+    padding-top: 48.5px;
     &__heading {
         color: #FFF;
         font-family: Montserrat;
@@ -161,8 +165,6 @@
 }
 .vector {
     width: 485px;
-    padding-top: 233.5px;
-    padding-bottom: 233.5px;
 }
 .smallImage {
     display: none;
