--- a/_tablet.scss
+++ b/_tablet.scss
@@ -54,7 +54,17 @@
             background-image: url(img/game3.jpg);
             background-repeat: no-repeat;
         }
-        .afterContent {
+        .firstGame {
+            padding-left: 56px;
+            padding-right: 56px;
+            padding-top: 51px;
+            padding-bottom: 85px;
+            display: flex;
+            flex-direction: column;
+            gap: 128px;
+            align-items: center;
+        }
+        .secondGame {
             padding-left: 56px;
             padding-right: 56px;
             padding-top: 51px;
